<resources>
    <string name="app_name">Health App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Live Healthy</string>
    <string name="nav_header_subtitle">ramin.armanfar@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_calories_list">Calories List</string>
    <string name="menu_food_recipes">Foods Recipes</string>
    <string name="menu_my_diets">My Diets</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_about">About</string>
</resources>
