<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_calories_list"
            android:icon="@drawable/ic_menu_calories_list"
            android:title="@string/menu_calories_list" />
        <item
            android:id="@+id/nav_foods_recipes"
            android:icon="@drawable/ic_menu_foods_recipes"
            android:title="@string/menu_food_recipes" />
        <item
            android:id="@+id/nav_my_diets"
            android:icon="@drawable/ic_menu_my_diets"
            android:title="@string/menu_my_diets" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_settings" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_about"
                android:title="@string/menu_about" />
        </menu>
    </item>

</menu>
